fix: questionを使用に併せて拡充
